--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<title>EuroStandart Натяжные потолки</title>
     <link rel="stylesheet" href="index.css">
@@ -25,7 +26,7 @@
 			<div class="Cont">
 				<nav>
 					<ul>
-						<li><a href="../../html/index.html">Онлайн каталог</a></li>
+						<li><a href="Catalog/catalog.html">Онлайн каталог</a></li>
 						<li><a href="../html/about.html">Контакты</a></li>
 						<li><a href="../../html/index.html">Заказать потолки</a></li>
 						<li><a href="../../html/index.html">Виды потолков</a></li>
@@ -33,6 +34,7 @@
 				</nav>
 			</div>
 		</div>
+	</div>
 	</header>
 	<!--
 	<a href="">назад</a>
@@ -47,7 +49,6 @@
 	<a href="#f9">9</a>
 -->
 
-</div>
 </div>
 </div>
 
