--- a/Главная.html
+++ b/Главная.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-1985"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-1985"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="501" data-image-height="512">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
