--- a/Главная.html
+++ b/Главная.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-1985"><div class="u-clearfix u-sheet u-valign-bottom-sm u-valign-bottom-xs u-sheet-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/default-logo.png.png" alt=""></span>
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-1985"><div class="u-clearfix u-sheet u-sheet-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/default-logo.png.png" alt=""></span>
         <p class="u-custom-font u-font-lobster u-text u-text-palette-2-base u-text-1">Мы ко<span style="font-weight: 700;">мпа</span>ния для людей&nbsp; 
         </p>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -70,7 +70,7 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-valign-top u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/501.jpg" alt=""></span>
+                <div class="u-container-layout u-valign-top-lg u-valign-top-xl u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/501.jpg" alt=""></span>
                   <h4 class="u-text u-text-body-alt-color u-text-1">Глянцевый цветной 501 потолок</h4>
                   <p class="u-text u-text-body-alt-color u-text-2">у нас в наличие имеютя 10 разных цвеных потолков</p>
                 </div>
