--- a/О-нас.html
+++ b/О-нас.html
@@ -39,6 +39,7 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Главная.html" style="padding: 10px 20px;">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="О-нас.html" style="padding: 10px 20px;">О нас</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Местоположение.html" style="padding: 10px 20px;">Местоположение</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Страница-1.html" style="padding: 10px 20px;">Страница 1</a>
 </li></ul>
           </div>
           <div class="u-nav-container-collapse">
@@ -48,6 +49,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Главная.html" style="padding-top: 22px; padding-bottom: 22px;">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="О-нас.html" style="padding-top: 22px; padding-bottom: 22px;">О нас</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Местоположение.html" style="padding-top: 22px; padding-bottom: 22px;">Местоположение</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Страница-1.html" style="padding-top: 22px; padding-bottom: 22px;">Страница 1</a>
 </li></ul>
               </div>
             </div>
