--- a/Главная.html
+++ b/Главная.html
@@ -42,6 +42,7 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Главная.html" style="padding: 10px 20px;">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="О-нас.html" style="padding: 10px 20px;">О нас</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Местоположение.html" style="padding: 10px 20px;">Местоположение</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Страница-1.html" style="padding: 10px 20px;">Страница 1</a>
 </li></ul>
           </div>
           <div class="u-nav-container-collapse">
@@ -51,6 +52,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Главная.html" style="padding-top: 22px; padding-bottom: 22px;">Главная</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="О-нас.html" style="padding-top: 22px; padding-bottom: 22px;">О нас</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Местоположение.html" style="padding-top: 22px; padding-bottom: 22px;">Местоположение</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Страница-1.html" style="padding-top: 22px; padding-bottom: 22px;">Страница 1</a>
 </li></ul>
               </div>
             </div>
@@ -66,7 +68,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-align-left u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-palette-4-base u-text-1">01</h2>
+                <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-palette-2-base u-text-1">01</h2>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-2">Быстрый Замер</h5>
                 <h5 class="u-text u-text-3"> У нас работает специалисты в области натяжных потолков с многолетним 
 опытом. Справится с любыми размерами, независимо какая у вас конструкция
@@ -75,7 +77,7 @@
             </div>
             <div class="u-align-left u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-palette-4-base u-text-4">02</h2>
+                <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-palette-2-base u-text-4">02</h2>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-5">Дизайн потолка</h5>
                 <h5 class="u-text u-text-6"> Задумались о красивом потолке? С красивыми картинками? Мы предоставляем 
 вам огромный каталог, с многочисленными картинками для каждого дизайна 
@@ -85,7 +87,7 @@
             </div>
             <div class="u-align-left u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-palette-4-base u-text-7">03</h2>
+                <h2 class="u-custom-font u-font-montserrat u-text u-text-default u-text-palette-2-base u-text-7">03</h2>
                 <h5 class="u-custom-font u-font-montserrat u-text u-text-8">Материалы</h5>
                 <h5 class="u-text u-text-9"> Мы предоставляем вам огромный выбор цветных потолков, у нас имеется глянцевые, матовые, а также фактурные материалы.</h5>
               </div>
@@ -156,8 +158,8 @@
                   <div class="u-expanded-width u-list u-list-1">
                     <div class="u-repeater u-repeater-1">
                       <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
-                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width u-image u-image-default u-image-1" data-image-width="960" data-image-height="960" src="images/100369275_2807183089329532_640038780677025340_n.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-xl u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-2">
+                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width-lg u-expanded-width-xl u-image u-image-default u-image-1" data-image-width="960" data-image-height="960" src="images/100369275_2807183089329532_640038780677025340_n.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
                           <h3 class="u-align-center u-text u-text-body-alt-color u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Центровые фотопечати<br>
                             <br>
                           </h3>
@@ -168,9 +170,9 @@
                         </div>
                       </div>
                       <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
-                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width u-image u-image-default u-image-2" data-image-width="960" data-image-height="1200" src="images/131382586_1005438223278875_6471835804656975283_n.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
-                          <h3 class="u-align-center u-text u-text-body-alt-color u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1000">угловые<br>&nbsp;фотопечати<br>
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-xl u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
+                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width-lg u-expanded-width-xl u-image u-image-default u-image-2" data-image-width="960" data-image-height="1200" src="images/131382586_1005438223278875_6471835804656975283_n.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                          <h3 class="u-align-center u-text u-text-body-alt-color u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1000">угловые&nbsp;фотопечати<br>
                             <br>
                           </h3>
                           <h3 class="u-align-center u-custom-item u-text u-text-4" data-animation-name="customAnimationIn" data-animation-duration="1000"> &nbsp;Квадрат от<br><span class="u-file-icon u-icon u-text-white"><img src="images/6366799-c833f3df.png" alt=""></span>
@@ -180,8 +182,8 @@
                         </div>
                       </div>
                       <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
-                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width u-image u-image-default u-image-3" data-image-width="640" data-image-height="640" src="images/186766988_1921661454668183_5689698178187399496_n.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-xl u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-4">
+                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width-lg u-expanded-width-xl u-image u-image-default u-image-3" data-image-width="640" data-image-height="640" src="images/186766988_1921661454668183_5689698178187399496_n.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
                           <h3 class="u-align-center u-text u-text-body-alt-color u-text-5" data-animation-name="customAnimationIn" data-animation-duration="1000">Центровые и угловые фотопечати</h3>
                           <h3 class="u-align-center u-custom-item u-text u-text-6" data-animation-name="customAnimationIn" data-animation-duration="1000"> &nbsp;Квадрат от&nbsp;<br><span class="u-file-icon u-icon u-text-white"><img src="images/6366799-c833f3df.png" alt=""></span>
                           </h3>
@@ -190,8 +192,8 @@
                         </div>
                       </div>
                       <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
-                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width u-image u-image-default u-image-4" data-image-width="1200" data-image-height="1600" src="images/8.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-valign-bottom-xl u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-5">
+                          <img alt="" class="u-border-2 u-border-palette-2-base u-expanded-width-lg u-expanded-width-xl u-image u-image-default u-image-4" data-image-width="1200" data-image-height="1600" src="images/8.jpg" data-animation-name="customAnimationIn" data-animation-duration="1000">
                           <h3 class="u-align-center u-text u-text-body-alt-color u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1000">Заливка<br>
                             <br>
                             <br>
@@ -204,8 +206,6 @@
                       </div>
                     </div>
                   </div>
-                  <h2 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-9" data-animation-name="customAnimationIn" data-animation-duration="1000">Более 1000 разных<br>картинок для вашего&nbsp;дизайна
-                  </h2>
                 </div>
               </div>
             </div>
