--- a/Главная.html
+++ b/Главная.html
@@ -38,21 +38,21 @@
 </g></svg>
             </a>
           </div>
-          <div class="u-nav-container">
+          <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Главная.html" style="padding: 10px 20px;">Главная</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="О-нас.html" style="padding: 10px 20px;">О нас</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Онлайн-каталог.html" style="padding: 10px 20px;">Онлайн каталог</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Местоположение.html" style="padding: 10px 20px;">Местоположение</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Страница-1.html" style="padding: 10px 20px;">Страница 1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="О-нас.html" style="padding: 10px 20px;">О нас</a>
 </li></ul>
           </div>
-          <div class="u-nav-container-collapse">
+          <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Главная.html" style="padding-top: 22px; padding-bottom: 22px;">Главная</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="О-нас.html" style="padding-top: 22px; padding-bottom: 22px;">О нас</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Местоположение.html" style="padding-top: 22px; padding-bottom: 22px;">Местоположение</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Страница-1.html" style="padding-top: 22px; padding-bottom: 22px;">Страница 1</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Главная.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Онлайн-каталог.html">Онлайн каталог</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Местоположение.html">Местоположение</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="О-нас.html">О нас</a>
 </li></ul>
               </div>
             </div>
@@ -217,7 +217,6 @@
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b4a2"><div class="u-align-left-md u-align-left-sm u-align-left-xs u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
     </section>
   
 </body></html>
