--- a/Онлайн-каталог.html
+++ b/Онлайн-каталог.html
@@ -24,24 +24,20 @@
     <meta property="og:title" content="Онлайн каталог">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-1985"><div class="u-clearfix u-sheet u-sheet-1"><span class="u-file-icon u-icon u-icon-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><img src="images/default-logo.png.png" alt=""></span>
-        <a href="tel:+7 (775) 640-5522" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-palette-2-base u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 405.333 405.333" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z"></path></svg><img></span>&nbsp;+7 (775) 640-5522
-        </a>
-        <p class="u-custom-font u-font-lobster u-text u-text-palette-2-base u-text-1" data-animation-name="pulse" data-animation-duration="1250" data-animation-direction="">Мы ко<span style="font-weight: 700;">мпа</span>ния для людей&nbsp; 
-        </p>
-        <nav class="u-menu u-menu-hamburger u-offcanvas u-menu-1" data-responsive-from="XL">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 9px 16px; font-size: calc(1em + 18px);">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-header u-header" id="sec-1985"><div class="u-clearfix u-sheet u-sheet-1">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
+          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;">
+            <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 9px 16px; font-size: calc(1em + 18px);">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Главная.html" style="padding: 10px 20px;">Главная</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Онлайн-каталог.html" style="padding: 10px 20px;">Онлайн каталог</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Местоположение.html" style="padding: 10px 20px;">Местоположение</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="О-нас.html" style="padding: 10px 20px;">О нас</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-5 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Главная.html" style="padding: 10px 20px;">Главная</a>
+</li><li class="u-nav-item"><a class="u-active-grey-5 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Онлайн-каталог.html" style="padding: 10px 20px;">Онлайн каталог</a>
+</li><li class="u-nav-item"><a class="u-active-grey-5 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Местоположение.html" style="padding: 10px 20px;">Местоположение</a>
+</li><li class="u-nav-item"><a class="u-active-grey-5 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-grey-10 u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="О-нас.html" style="padding: 10px 20px;">О нас</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -57,7 +53,11 @@
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
-        </nav>
+        </nav><span class="u-file-icon u-icon u-icon-1" data-animation-name="customAnimationIn" data-animation-duration="1000"><img src="images/default-logo.png.png" alt=""></span>
+        <a href="tel:+7 (775) 640-5522" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-palette-2-base u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 405.333 405.333" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z"></path></svg><img></span>&nbsp;+7 (775) 640-5522
+        </a>
+        <p class="u-custom-font u-font-lobster u-text u-text-palette-2-base u-text-1" data-animation-name="pulse" data-animation-duration="1250" data-animation-direction="">Мы ко<span style="font-weight: 700;">мпа</span>ния для людей&nbsp; 
+        </p>
         <a href="tel:+7 705 618 7161" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-palette-2-base u-top-left-radius-0 u-top-right-radius-0 u-btn-2"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 405.333 405.333" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z"></path></svg><img></span>+7 (705) 618-7161
         </a>
       </div></header>
@@ -106,7 +106,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-4">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <a class="u-post-header-link" href="blog/пост-5.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4" src="images/5b2b5f1220a1fbcc1de533afe5434a2e.jpg" data-image-width="1920" data-image-height="1282" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4" src="images/454763497.jpg" data-image-width="1920" data-image-height="1282" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
                 </a>
                 <h2 class="u-align-center u-text u-text-5" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">Небоскрёбы</h2>
                 <a href="Обалко1.html" class="u-active-white u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-hover-white u-none u-radius-15 u-text-active-palette-4-base u-text-hover-palette-4-base u-text-palette-1-base u-btn-4"> Больше картинок</a>
@@ -115,7 +115,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-5">
               <div class="u-container-layout u-similar-container u-container-layout-5">
                 <a class="u-post-header-link" href="blog/пост-4.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-5" src="images/324.jpg" data-image-width="1920" data-image-height="1296" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-5" src="images/131023_ryby_paski_rafa_koralowa_metalowa_drabinka.jpg" data-image-width="1920" data-image-height="1296" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
                 </a>
                 <h2 class="u-align-center u-text u-text-6" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">Карты</h2>
                 <a href="Обалко1.html" class="u-active-white u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-hover-white u-none u-radius-15 u-text-active-palette-4-base u-text-hover-palette-4-base u-text-palette-1-base u-btn-5"> Больше картинок</a>
@@ -124,7 +124,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-6">
               <div class="u-container-layout u-similar-container u-container-layout-6">
                 <a class="u-post-header-link" href="blog/пост-3.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-6" src="images/58c28057edcc1a9dd3f1882db7f1245e.jpg" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" data-image-width="1920" data-image-height="1525"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-6" src="images/758094449798.jpg" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" data-image-width="1920" data-image-height="1525"><!--/blog_post_image-->
                 </a>
                 <h2 class="u-align-center u-text u-text-7" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500">Космос</h2>
                 <a href="Обалко1.html" class="u-active-white u-border-2 u-border-active-white u-border-hover-white u-border-white u-btn u-btn-round u-button-style u-hover-white u-none u-radius-15 u-text-active-palette-4-base u-text-hover-palette-4-base u-text-palette-1-base u-btn-6"> Больше картинок</a>
